v3.10.7 (XXXX-XX-XX)
--------------------

* Updated ArangoDB Starter to 0.15.8.

* FE-211: Allow admins to edit gravatar email.

* BTS-1255: Fix sporadic memory usage accounting underflows in in-memory cache
  subsystem.
  Also turn the algorithm for freeing memory from a cache's buckets from a
  non-deterministic one that did not guarantee progress into a bounded algorithm
  with guaranteed progress.

* Add a startup parameter `--rclone.argument` which can be utilised to enable
  debugging with logfiles in hot backup RClone upload operacions:
  `--rclone.argument=--log-level=DEBUG`
  `--rclone.argument=-log-file=/tmp/rclone.log`

* ECONNABORTED is treated as a ConnectionClosed error in fuerte.

* Database drop operation no longer fails if we cannot remove the corresponding
  permissions from the _users collection.

* BTS-1261 For some named graphs in cluster, when creating a debugDump for a
  traversal query that would use the graph's name, the graph wouldn't be able to
  be recreated because the info gathered in the process of creating a debugDump
  was broken. It uses the result form an aql explain to get the graph info and
  use in the debugDump, but this wouldn't be available because, instead of
  having the name of the graph as key in the graph object of the explain, there
  would be an array with edge collection names. It was changed for the case when
  there's a named graph, but maintained when there's no access to the graph's
  name.

* Fix issue #18982: query editor null/undefined check filters out bindParams
  with value 0.

* Support parsing HTTP GET requests with velocypack Content-Type without a
  request body. Previously parsing such requests led to an error on the server
  side.

* ES-1566: fix an issue when trying to restrict traversals to non-existing
  collections with the `edgeCollections` traversal option.
  
  If a non-existing collection is specified in the `edgeCollections` or