@@ -1,6 +1,10 @@
 v3.10.7 (XXXX-XX-XX)
 --------------------
 
+* APM-766, SEARCH-479: Reduce memory overhead for ArangoSearch removes.
+
+* Improve precision for ArangoSearch GEO_IN_RANGE function.
+
 * Updated ArangoDB Starter to 0.15.8.
 
 * FE-211: Allow admins to edit gravatar email.
